[package]
name = "sqrt_program_cpi"
description = "helps to get sqrt price using index"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
default = ["cpi"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-gen = "0.3.0"
anchor-lang = "0.26.0"
